Modificació primera pagina
He fet hola alba

--- a/src/GestorDeProjecteBundle/Resources/views/Default/index.html.twig
+++ b/src/GestorDeProjecteBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,18 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %}{% endblock %}</title>
+    {% block stylesheets %}{% endblock %}
+</head>
+
+<body>
+    {% block body %}Hello Alba{% endblock %}
+
+    {% block javascripts %}{% endblock %}
+</body>
+
+</html>
+
