--- a/src/GestorDeProjecteBundle/Resources/views/Default/index.html.twig
+++ b/src/GestorDeProjecteBundle/Resources/views/Default/index.html.twig
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    {% block body %}Hello Alba{% endblock %}
+    {% block body %}Aquí ha d'anar la pàgina d'inici amb el lògin{% endblock %}
 
     {% block javascripts %}{% endblock %}
 </body>
