--- a/src/GestorDeProjecteBundle/Resources/views/Default/index.html.twig
+++ b/src/GestorDeProjecteBundle/Resources/views/Default/index.html.twig
@@ -24,7 +24,7 @@
     <div class="container">
 	    <div class="row">
 	    	<div class="col-lg-6 col-lg-offset-3">
-	    		<img class="pull-right" src="../web/img/logo2.png">
+	    		<img class="pull-right" src="{{asset('../web/img/logo2.png')}}">
 	    		
 	    	</div>
 	    </div>
