--- a/src/GestorDeProjecteBundle/Resources/views/Default/mostraUnaPersona.html.twig
+++ b/src/GestorDeProjecteBundle/Resources/views/Default/mostraUnaPersona.html.twig
@@ -5,6 +5,7 @@
 		  	<td><strong>Id</strong></td>
 		  	<td><strong>Nif</strong></td>
 		  	<td><strong>Nom</strong></td>
+		  	<td><strong>Cognom</strong></td>
 		  	<td><strong>Tipus</strong></td>
 		  	<td><strong>Hores</strong></td>
 		</tr>
@@ -13,6 +14,7 @@
         	<td>{{persona.Nif}}</td>
         	<td>{{persona.Nom}}</td>
         	<td>{{persona.Cognom}}</td>
+        	<td>{{persona.Tipus}}</td>
         	<td>{{persona.hores}}</td>
         </tr>
 	</table>
